# Isolator

./: .gitattributes  README.md  build.hacker  install.hacker  install.hl  remove.hl
builder/: go.mod  integration_test.go  log.go  main.go  pipeline.go  spec.go  spec_test.go
builder/internal/hk/: hk.go
daemon/: config.go  config_test.go  go.mod  log.go  main.go  scheduler.go  socket.go
examples/config/: isolator.toml
examples/hackerfile/: 1.hacker
isolated/: go.mod  main.go
isolated/src/: autoremove.go  constants.go  deps_test.go  docs.go  help.go  hk.go  install.go  integration_test.go  list.go  rcd.go  run.go  security.go  security_test.go  snapshot.go  status.go  types.go
repo/: package-list.hacker  package-list.json  package-list.json.sha256
source-code/: Cargo.toml  go.mod  main.go  main.odin
source-code/fast/: iso.hacker
source-code/src/: clean.go  config.go  config_test.go  constants.go  container.go  deps.go  distros.go  envfile.go  envfile_test.go  exec.go  gui.go  help.go  helpers.go  helpers_state.go  hk_test.go  info.go  init.go  install.go  main.rs  refresh.go  remove.go  repo.go  search.go  tui.go  types.go  update.go  upgrade.go  wrapper.go
store/: meson.build
store/data/: org.hackeros.IsolatorStore.desktop  store.gresource.xml  window.ui
store/src/: isolator-client.vala  main.vala  package-row.vala  package.vala  window.vala
